# bentoml-faster-whisper

./: .dockerignore  .editorconfig  .env.example  .env.schema  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  SIMPLIFY_BACKLOG.md  compose.yaml  config.py  core.py  diarization_service.py  launch.py  model_manager.py  mypy.ini  prometheus.yml  pyproject.toml  pytest.ini  renovate.json  service.py  utils.py  whiper_diarization_merger.py
.agents/skills/dcc-backend/: SKILL.md
.agents/skills/dcc-backend/references/: backend-llm-agent.md  backend-logger.md  backend-probes.md  index.md
.agents/skills/dcc-coding/: SKILL.md
.agents/skills/dcc-coding/references/: nuxt.md
.agents/skills/dcc-git/: SKILL.md
.agents/skills/dcc-nuxt-layers/: SKILL.md
.agents/skills/dcc-nuxt-layers/references/: nuxt-layer-auth.md  nuxt-layer-backend-communication.md  nuxt-layer-feedback-control.md  nuxt-layer-health-check.md  nuxt-layer-logger.md
.agents/skills/dcc-ui/: SKILL.md
.agents/skills/dcc-ui/references/: disclaimer-button.md  disclaimer.md  index.md  online-status.md  undo-redo-buttons.md  useUserFeedback.md
.agents/skills/docker/: SKILL.md
.agents/skills/docker/references/: index.md
.agents/skills/varlock/: SKILL.md
.agents/skills/varlock/references/: index.md
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml  release.yml
api_models/: SmallSegment.py  TranscriptionJsonDiariexedResponse.py  TranscriptionJsonResponse.py  TranscriptionRequest.py  TranscriptionVerboseJsonResponse.py  TranslationRequest.py  decode_params.py  enums.py  input_models.py  output_models.py
docs/: technical_architecture.md
handlers/: fast_whipser_handler.py  progress_handler.py
helpers/: hallucinations.py  iter_with_peek.py  language_id.py  logger.py  metrics.py  speech_regions.py  timing.py  transcription_cleaner.py  utils.py  whiper_diarization_merger.py
scripts/: run_varlock.sh
src/bentoml_faster_whisper/: __init__.py  config.py  container.py  service.py
src/bentoml_faster_whisper/models/: __init__.py  decode_params.py  enums.py  input_models.py  output_models.py  transcription_json_diarized_response.py  transcription_json_response.py  transcription_request.py  transcription_verbose_json_response.py  translation_request.py
src/bentoml_faster_whisper/services/: __init__.py  diarization_service.py  faster_whisper_handler.py  model_manager.py  progress_handler.py
src/bentoml_faster_whisper/utils/: __init__.py  core.py  iter_with_peek.py  language_id.py  logger.py  metrics.py  speech_regions.py  transcription_cleaner.py  whisper_diarization_merger.py
tests/: conftest.py  fuzzy_match.py
tests/assets/: Telefonat.m4a  regionaljournal_turns.json  silence_audio.m4a  telefonat_transcript.json
tests/integration/: _task_http.py  test_diarization_integration.py  test_integration.py  test_load_performance.py  test_missing_segments_integration.py  test_open_ai_integration.py  test_pipeline_real_audio.py  test_task_cancellation.py  test_telefonat_quality.py
tests/performance/: __init__.py  test_load_performance.py  test_performance_improvements_tdd.py
tests/unit/: test_analyse_faster_whisper_bug.py  test_audio_decode_error_scenarios.py  test_brain_dump_missing_segments.py  test_container.py  test_decode_progress.py  test_decode_run_language.py  test_diagnose_ui_imports.py  test_diarization.py  test_diarization_pipeline.py  test_diarization_service.py  test_dotenv_load_order.py  test_fast_whisper_models.py  test_fast_whisper_translate.py  test_faster_whisper_transcribe.py  test_fuzzy_match.py  test_language_id.py  test_logging.py  test_metrics.py  test_missing_segments_regression.py  test_multilang_teams.py  test_multilingual_transcription.py  test_output_formatting.py  test_performance_improvements_tdd.py  test_pipeline_resource_management.py  test_service_endpoints.py  test_speech_regions.py  test_telefonat_quality.py  test_transcription_cleaner.py  test_transcription_request.py  test_translate_cleaning.py  test_whiper_diarization_merger.py  test_whisper_diarization_merger.py
tools/: diagnose_ui.py  download_models.py  eval_quality.py  launch.py  load_test.py
