[project]
name = "bentoml-faster-whisper"
version = "1.5.2"
requires-python = ">=3.13,<3.14"
dependencies = [
    "bentoml==1.4.39",
    "fastapi>=0.138.0",
    "faster-whisper==1.2.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchcodec>=0.11",
    "nvidia-npp-cu12; sys_platform == 'linux' or sys_platform == 'win32'",
    "pydantic>=2.12.2",
    "requests~=2.33.1",
    "ctranslate2~=4.8.0",
    "python-dotenv~=1.2.0",
    "uvicorn~=0.49.0",
    "pyannote-audio>=4.0",
    "huggingface-hub>=0.23",
    "loguru>=0.7.3",
    "numpy>=2.5.0"
]
[dependency-groups]
dev = [
    "ty>=0.0.1",
    "pre-commit>=4.2.0",
    "pytest~=9.1.0",
    "pytest-asyncio>=0.24.0",
    "openai>=1.65.1",
    "ruff>=0.15.18"
]

[tool.bentoml.build]
service = "service:FasterWhisper"
description = "OpenAI compatible ++ FasterWhisper API"
include = ["*.py", "path/to/a/file.csv"]
exclude = ["tests/", "launch.py"]

[tool.bentoml.build.labels]
owner = "Yanick-Schraner"
stage = "production"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchcodec = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (run with 'make integration')",
]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true
