[project]
name = "bentoml-faster-whisper"
version = "2.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "bentoml==1.4.39",
    "fastapi>=0.138.0",
    "faster-whisper==1.2.1",
    # cu130 index caps torchaudio at 2.11.0; torch/torchaudio share an ABI so both
    # must stay on the same 2.11.x train. torchcodec 0.14 supports torch >=2.11.
    "torch>=2.11,<2.12",
    "torchaudio>=2.11,<2.12",
    "torchcodec>=0.13",
    # ctranslate2 (the faster-whisper engine) is a CUDA-12 build: it dlopens
    # libcublas.so.12 and libcudnn.so.9. The cu130 torch wheels already bundle
    # cuBLAS 13 (nvidia/cu13/lib) and cuDNN 9 built for cu13; the Dockerfile symlinks
    # libcublas.so.12 -> .so.13, which is ABI-compatible for ctranslate2's use
    # (OpenNMT/CTranslate2#1933), so no separate CUDA-12 pip libs are needed.
    "pydantic>=2.12.2",
    "requests~=2.34.2",
    "ctranslate2~=4.8.0",
    "python-dotenv~=1.2.0",
    "uvicorn~=0.50.1",
    "pyannote-audio>=4.0",
    "huggingface-hub>=0.23",
    "numpy>=2.5.0",
    "structlog>=26.1.0",
]
[dependency-groups]
dev = [
    "ty>=0.0.1",
    "pre-commit>=4.2.0",
    "pytest~=9.1.0",
    "pytest-asyncio>=0.24.0",
    "openai>=1.65.1",
    "ruff>=0.15.18",
    "gradio>=6.20.0",
]

[tool.bentoml.build]
service = "service:FasterWhisper"
description = "OpenAI compatible ++ FasterWhisper API"
include = ["*.py", "path/to/a/file.csv"]
exclude = ["tests/", "launch.py"]

[tool.bentoml.build.labels]
owner = "Yanick-Schraner"
stage = "production"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchcodec = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (run with 'make integration')",
]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true
